k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: traefik-gateway
  labels:
    name: traefik-gateway
