k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-ingress
  namespace: traefik-gateway
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - apifincheck.husanenglish.online
    secretName: traefik-tls
  rules:
  - host: apifincheck.husanenglish.online
    http:
      paths:
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: backend1-service
            port:
              number: 3000
      - path: /users
        pathType: Prefix
        backend:
          service:
            name: backend1-service
            port:
              number: 3000
      - path: /products
        pathType: Prefix
        backend:
          service:
            name: backend2-service
            port:
              number: 8000
      - path: /docs
        pathType: Prefix
        backend:
          service:
            name: backend2-service
            port:
              number: 8000
      - path: /orders
        pathType: Prefix
        backend:
          service:
            name: backend3-service
            port:
              number: 8080
